--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-fileupload": "^0.3.0",
-    "mongodb": "^2.2.31"
+    "jsonwebtoken": "^8.1.0",
+    "mongodb": "^2.2.31",
+    "nodemon": "^1.12.5",
+    "socket.io": "^2.0.4"
   },
   "repository": {
     "type": "git",
