--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-fileupload": "^0.3.0",
     "jsonwebtoken": "^8.1.0",
     "mongodb": "^2.2.31",
+    "morgan": "^1.9.0",
     "nodemon": "^1.12.5",
     "socket.io": "^2.0.4"
   },
