--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^1.0.3",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
+    "lodash": "^4.17.5",
     "mongoose": "^5.0.3",
     "morgan": "^1.9.0",
     "nodemon": "^1.12.5",
