--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "apidoc": "^0.17.6",
+    "async": "^2.6.0",
     "bcrypt": "^1.0.3",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
