--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "async": "^2.6.0",
     "bcrypt": "^1.0.3",
     "express": "^4.16.2",
+    "express-fileupload": "^0.4.0",
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.5",
     "mongoose": "^5.0.3",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.6.5",
     "nodemon": "^1.12.5",
     "socket.io": "^2.0.4"
   },
