--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "SportsFun EIP - Server Application",
   "main": "eip-server.js",
   "scripts": {
-    "start": "nodemon eip-server.js",
+    "start": "docker-compose build && docker-compose up -d",
     "doc": "apidoc -i ./routes/ -o ./public/doc/ -c ./doc/",
-    "docker": "node eip-server.js"
+      "docker": "node eip-server.js",
+      "test": "docker-compose build && docker run --rm -it --network mongodb eip-server_sportsfun-server ./node_modules/mocha/bin/mocha"
   },
   "dependencies": {
     "apidoc": "^0.17.6",
@@ -31,5 +32,10 @@
   "bugs": {
     "url": "https://github.com/Xobtah/EIP-Server/issues"
   },
-  "homepage": "https://github.com/Xobtah/EIP-Server#readme"
+  "homepage": "https://github.com/Xobtah/EIP-Server#readme",
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.2.0",
+    "mocha": "^5.2.0"
+  }
 }
